# opencanvaspython

./: .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
agents/src/: utils.py
agents/src/open_canvas/: index.py  state.py
agents/src/open_canvas/nodes/: custom_action.py  generate_followup.py  generate_title.py  reflect.py  reply_to_general_input.py  rewrite_artifact_theme.py  rewrite_code_artifact_theme.py  summarizer.py  update_artifact.py  update_highlighted_text.py
agents/src/open_canvas/nodes/generate_artifact/: index.py  schemas.py  utils.py
agents/src/open_canvas/nodes/generate_path/: documents.py  dynamic_determine_path.py  include_url_contents.py  index.py
agents/src/open_canvas/nodes/rewrite_artifact/: index.py  schemas.py  update_meta.py  utils.py
agents/src/reflection/: index.py  state.py
agents/src/summarizer/: index.py
agents/src/thread_title/: index.py  state.py
agents/src/web_search/: index.py
agents/src/web_search/nodes/: classify_message.py  query_generator.py  search.py
shared/src/: constants.py  types.py
shared/src/utils/: artifacts.py  thinking.py
